# performance-analysis

./: .gitmodules  README.md  bench.py  common_shapes.json  cudagraph.gp  flagtree-no-amd-libanalysis.patch  heatmap.gp  install-flagtree.sh  install-llvm.sh  join.py  pyproject.toml  ratio.py  result_common_shapes.txt  setup.sh  slice.gp  trend.gp  visualize.ps1
export/: data-common-shapes-cudagraph-e2e.txt  data-common-shapes-cudagraph-kernel-ratio.txt  data-common-shapes-cudagraph-kernel.txt  data-common-shapes-no-cudagraph-e2e.txt  data-common-shapes-no-cudagraph-kernel.txt  data-cudagraph-e2e.txt  data-cudagraph-kernel.txt  data-e2e.txt  data-kernel.txt  data-no-cudagraph-e2e.txt  data.txt  result_3_3.txt  result_3_4.txt  result_common_shapes.txt  result_common_shapes_3_3.txt  result_common_shapes_3_3_cudagraph.txt  result_common_shapes_3_4.txt  result_common_shapes_3_4_cudagraph.txt  result_common_shapes_cudagraph.txt  result_common_shapes_cudagraph_ratio.txt  result_cudagraph.txt  result_cudagraph_3_3.txt  result_cudagraph_3_4.txt
export/3.3/: mm_no_tma.cubin  mm_no_tma.llir  mm_no_tma.ptx  mm_no_tma.ttgir  mm_no_tma.ttir
export/3.4/: mm_device_tma.cubin  mm_device_tma.llir  mm_device_tma.ptx  mm_device_tma.ttgir  mm_device_tma.ttir  mm_host_tma.cubin  mm_host_tma.llir  mm_host_tma.ptx  mm_host_tma.ttgir  mm_host_tma.ttir  mm_no_tma.cubin  mm_no_tma.llir  mm_no_tma.ptx  mm_no_tma.ttgir
