[project]
name = "performance-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "basedpyright>=1.39.5",
    "click>=8.4.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "torch>=2.12.0",
]
